--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && nodemon dist/server.js",
-    "start:cmd": "tsc -p tsconfig.cmd.json && nodemon dist_cmd/cmd.js",
-    "build": "rd /s /q dist && tsc --watch",
+    "start": "npm run build && node dist/run-array.js",
+    "serve": "tsc && nodemon dist/server.js",
+    "watch": "rd /s /q dist && tsc --watch",
+    "build": "rd /s /q dist && tsc",
     "run:api": "npm run --prefix ../interview-mock-api serve",
     "test": "SET NODE_ENV=test&& rd /s /q test && tsc -p tsconfig.test.json &&  mocha test/tests"
+    
   },
   "author": "",
   "license": "ISC",
