--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
         "lib": [ "es2015", "es7"]
     },
     "include": [
-        "remesh/server.js"    
+        "remesh/server.js",
+        "remesh/run-array.js"  
     ]
     ,
     "exclude": [
