--- a/tsconfig.message-filter.json
+++ b/tsconfig.message-filter.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "dist",
+        "outDir": "dist/message-filter",
         "module": "commonjs",
         "target": "es6",
         "allowJs": true,
@@ -8,8 +8,7 @@
         "lib": [ "es2015", "es7"]
     },
     "include": [
-        "remesh/server.js",
-        "remesh/run-array.js"  
+        "remesh/server.js"
     ]
     ,
     "exclude": [
