--- a/tsconfig.array.json
+++ b/tsconfig.array.json
@@ -8,7 +8,7 @@
         "lib": [ "es2015", "es7"]
     },
     "include": [
-        "remesh/run-array.js"  
+        "src/run-array.js"  
     ]
     ,
     "exclude": [
