--- a/tsconfig.array.json
+++ b/tsconfig.array.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "outDir": "dist/array-reverser",
+        "outDir": "dist-array-reverser",
         "module": "commonjs",
         "target": "es6",
         "allowJs": true,
