committing work to readme

--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "start": "npm run build:array && node dist-array-reverser/run-array.js",
     "serve": "npm run build:message && nodemon dist-message-filter/server.js",
-    "build:array": "rd /s /q dist-array-reverser && tsc -p tsconfig.array.json",
-    "build:message": "rd /s /q dist-message-filter && tsc -p tsconfig.message.json",
+    "build:array": "rd /s /q dist-array-reverser & tsc -p tsconfig.array.json",
+    "build:message": "rd /s /q dist-message-filter & tsc -p tsconfig.message.json",
     "start:api": "npm run --prefix ../interview-mock-api serve",
-    "test": "SET NODE_ENV=test&& rd /s /q test && tsc -p tsconfig.test.json &&  mocha test/tests"
-    
+    "test": "SET NODE_ENV=test&& rd /s /q test & tsc -p tsconfig.test.json &&  mocha test/tests"
   },
   "author": "",
   "license": "ISC",
@@ -24,9 +23,6 @@
     "express": "^4.16.3",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.4",
-    "source-map-loader": "^0.2.4",
-    "start-server-webpack-plugin": "^2.2.5",
-    "ts-loader": "^5.0.0",
     "typescript": "^3.0.3"
   },
   "dependencies": {
